--- a/frontend/views/navbar.ejs
+++ b/frontend/views/navbar.ejs
@@ -4,7 +4,7 @@
     <a id="navTitleLink" href="/">
         <h1 id="navTitle">Play Store</h1>
     </a>
-    <input id="navSearch" placeholder="Search..." type="text">
+    <input id="navSearch" placeholder="Search..." pattern=".{3,}" title="At least 3 characters" type="text">
     <img id="pp" src="" alt="profile pic">
     <button class="navButtons" id="logoutNavButton"><a href="/logout">Logout</a></button>
     <button class="navButtons" id="signupNavButton">Sign Up</button>
@@ -25,7 +25,9 @@
     <h1>Play Store</h1>
     <img src="/media/logo_transparent_big.png" alt="logo">
     <div id="forgotPasswordDiv">
-        <strong><p>A new password willl be sent to this address</p></strong>
+        <strong>
+            <p>A new password willl be sent to this address</p>
+        </strong>
         <form action="/forgot" method="POST" id="forgotUserForm">
             <input type="text" id="email" name="email" placeholder="Email"><br>
             <input type="submit" value="Send me an Email" id="forgotUserFormButton">
@@ -53,7 +55,9 @@
 <div id="userFormDiv">
     <h1>Play Store</h1>
     <img src="/media/logo_transparent_big.png" alt="logo">
-    <strong><p>We will send a new password to your email address</p></strong>
+    <strong>
+        <p>We will send a new password to your email address</p>
+    </strong>
     <form action="/forgot" method="POST" id="userForm">
         <input type="text" id="email" name="email" placeholder="Email"><br>
         <input type="submit" value="Send me an Email" id="userFormButton">
@@ -64,10 +68,10 @@
     <div class="dropdown">
         <button class="dropbtn">Choose Currency</button>
         <div class="dropdown-content">
-            <a href="#">
+            <a id="USD" href="#">
                 <img src="media/currency/united-states.png" width="15" height="15"> USD
             </a>
-            <a href="#">
+            <a id="LBP" href="#">
                 <img src="media/currency/lebanon.png" width="15" height="15"> LBP
             </a>
         </div>
