--- a/frontend/views/applicationsTop.ejs
+++ b/frontend/views/applicationsTop.ejs
@@ -12,7 +12,7 @@
         <h1 class="page_title">APPLICATIONS</h1>
         <div id="content">
             <div class="itemsRow">
-                <% for (var i=0;i<10;i++) {%>
+                <% for (var i=0;i<applications.length;i++) {%>
                     <div class="itemBox">
 
                         <img class="itemImageHome" src="<%=applications[i].image%>" alt="Image">
