--- a/frontend/views/books.ejs
+++ b/frontend/views/books.ejs
@@ -9,44 +9,78 @@
 
 <body>
     <%- include('navbar')%>
-    <h1 class="page_title">BOOKS</h1>
-
-    <div id="content">
-        <div class="itemsRowHome">
-            <% for (var i=0;i<10;i++) {%>
-                <div class="itemBox largeItemBoxHome">
-                    <img class="itemImageHome" src="<%=books[i].image%>" alt="Image">
-                    <a href="/item?itemType=<%=books[i].constructor.modelName%>&itemId=<%=books[i]._id%>">
-                        <p class="itemTitleHome">
-                            <%=books[i].title%>
+        <h1 class="page_title">BOOKS</h1>
+        <div id="content">
+            <h3>Top Selling Books</h3>
+            <a href="/books/topSelling"><button class="dropbtn seemore">See More...</button></a>
+            <div class="itemsRowHome">
+                <% for (var i=0;i<booksTopSelling.length;i++) {%>
+                    <div class="itemBox largeItemBoxHome">
+                        <img class="itemImage" src="<%=booksTopSelling[i].image%>" alt="Image">
+                        <a
+                            href="/item?itemType=<%=booksTopSelling[i].constructor.modelName%>&itemId=<%=booksTopSelling[i]._id%>">
+                            <p class="itemTitle">
+                                <%=booksTopSelling[i].title%>
+                            </p>
+                        </a>
+                        <p class="itemType">
+                            <%=booksTopSelling[i].constructor.modelName%>
                         </p>
-                    </a>
-                    <p class="itemType">
-                        <%=books[i].constructor.modelName%>
-                    </p>
-                    <p class="itemId">
-                        <%=books[i]._id%>
-                    </p>
-                    <% if (username) { %>
-                        <% if (wishlist.includes(books[i]._id)) { %>
-                            <a href="#"><i class="fa fa-bookmark bookmark"></i></a>
-                            <% } else { %>
-                                <a href="#"><i class="fa fa-bookmark-o bookmark"></i></a>
-                                <% } %>
+                        <p class="itemId">
+                            <%=booksTopSelling[i]._id%>
+                        </p>
+                        <% if (username) { %>
+                            <% if (wishlist.includes(booksTopSelling[i]._id)) { %>
+                                <a href="#"><i class="fa fa-bookmark bookmark"></i></a>
+                                <% } else { %>
+                                    <a href="#"><i class="fa fa-bookmark-o bookmark"></i></a>
                                     <% } %>
-                                        <p class="itemPrice">
-                                            <% if (books[i].price===0) { %>
-                                                Free
-                                                <% } else { %>
-                                                    <%=books[i].price%>$
-                                                        <% } %>
-                                        </p>
-                </div>
-                <%}%>
-        </div>
-
-    <button class="dropbtn seemore">See More...</button>
-
+                                        <% } %>
+                                            <p class="itemPrice">
+                                                <% if (booksTopSelling[i].price===0) { %>
+                                                    Free
+                                                    <% } else { %>
+                                                        <%=booksTopSelling[i].price%>$
+                                                            <% } %>
+                                            </p>
+                    </div>
+                    <%}%>
+            </div>
+            <h3>New Release Books</h3>
+            <a href="/books/newestReleases"><button class="dropbtn seemore">See More...</button></a>
+            <div class="itemsRowHome">
+                <% for (var i=0;i<booksNewest.length;i++) {%>
+                    <div class="itemBox largeItemBoxHome">
+                        <img class="itemImage" src="<%=booksNewest[i].image%>" alt="Image">
+                        <a
+                            href="/item?itemType=<%=booksNewest[i].constructor.modelName%>&itemId=<%=booksNewest[i]._id%>">
+                            <p class="itemTitle">
+                                <%=booksNewest[i].title%>
+                            </p>
+                        </a>
+                        <p class="itemType">
+                            <%=booksNewest[i].constructor.modelName%>
+                        </p>
+                        <p class="itemId">
+                            <%=booksNewest[i]._id%>
+                        </p>
+                        <% if (username) { %>
+                            <% if (wishlist.includes(booksNewest[i]._id)) { %>
+                                <a href="#"><i class="fa fa-bookmark bookmark"></i></a>
+                                <% } else { %>
+                                    <a href="#"><i class="fa fa-bookmark-o bookmark"></i></a>
+                                    <% } %>
+                                        <% } %>
+                                            <p class="itemPrice">
+                                                <% if (booksNewest[i].price===0) { %>
+                                                    Free
+                                                    <% } else { %>
+                                                        <%=booksNewest[i].price%>$
+                                                            <% } %>
+                                            </p>
+                    </div>
+                    <%}%>
+            </div>
             <%- include('footer')%>
         </div>
 </body>
