--- a/frontend/views/headImports.ejs
+++ b/frontend/views/headImports.ejs
@@ -10,4 +10,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script type="text/javascript" src="/../js/index.js"></script>
 <script type="text/javascript" src="/../js/itemBox.js"></script>
+<script type="text/javascript" src="/../js/currency.js"></script>
+<script type="text/javascript" src="/../js/filter.js"></script>
 <script type="text/javascript" src="/../js/footer.js"></script>
