--- a/frontend/views/movies.ejs
+++ b/frontend/views/movies.ejs
@@ -10,42 +10,77 @@
 <body>
     <%- include('navbar')%>
         <h1 class="page_title">MOVIES</h1>
-
         <div id="content">
+            <h3>Top Selling movies</h3>
+            <a href="/movies/topSelling"><button class="dropbtn seemore">See More...</button></a>
             <div class="itemsRowHome">
-                <% for (var i=0;i<10;i++) {%>
+                <% for (var i=0;i<moviesTopSelling.length;i++) {%>
                     <div class="itemBox largeItemBoxHome">
-                        <img class="itemImage" src="<%=movies[i].image%>" alt="Image">
-                        <a href="/item?itemType=<%=movies[i].constructor.modelName%>&itemId=<%=movies[i]._id%>">
+                        <img class="itemImage" src="<%=moviesTopSelling[i].image%>" alt="Image">
+                        <a
+                            href="/item?itemType=<%=moviesTopSelling[i].constructor.modelName%>&itemId=<%=moviesTopSelling[i]._id%>">
                             <p class="itemTitle">
-                                <%=movies[i].title%>
+                                <%=moviesTopSelling[i].title%>
                             </p>
                         </a>
                         <p class="itemType">
-                            <%=movies[i].constructor.modelName%>
+                            <%=moviesTopSelling[i].constructor.modelName%>
                         </p>
                         <p class="itemId">
-                            <%=movies[i]._id%>
+                            <%=moviesTopSelling[i]._id%>
                         </p>
                         <% if (username) { %>
-                            <% if (wishlist.includes(movies[i]._id)) { %>
+                            <% if (wishlist.includes(moviesTopSelling[i]._id)) { %>
                                 <a href="#"><i class="fa fa-bookmark bookmark"></i></a>
                                 <% } else { %>
                                     <a href="#"><i class="fa fa-bookmark-o bookmark"></i></a>
                                     <% } %>
                                         <% } %>
                                             <p class="itemPrice">
-                                                <% if (movies[i].price===0) { %>
+                                                <% if (moviesTopSelling[i].price===0) { %>
                                                     Free
                                                     <% } else { %>
-                                                        <%=movies[i].price%>$
+                                                        <%=moviesTopSelling[i].price%>$
                                                             <% } %>
                                             </p>
                     </div>
                     <%}%>
             </div>
-
-            <button class="dropbtn seemore">See More...</button>
+            <h3>New Release movies</h3>
+            <a href="/movies/newestReleases"><button class="dropbtn seemore">See More...</button></a>
+            <div class="itemsRowHome">
+                <% for (var i=0;i<moviesNewest.length;i++) {%>
+                    <div class="itemBox largeItemBoxHome">
+                        <img class="itemImage" src="<%=moviesNewest[i].image%>" alt="Image">
+                        <a
+                            href="/item?itemType=<%=moviesNewest[i].constructor.modelName%>&itemId=<%=moviesNewest[i]._id%>">
+                            <p class="itemTitle">
+                                <%=moviesNewest[i].title%>
+                            </p>
+                        </a>
+                        <p class="itemType">
+                            <%=moviesNewest[i].constructor.modelName%>
+                        </p>
+                        <p class="itemId">
+                            <%=moviesNewest[i]._id%>
+                        </p>
+                        <% if (username) { %>
+                            <% if (wishlist.includes(moviesNewest[i]._id)) { %>
+                                <a href="#"><i class="fa fa-bookmark bookmark"></i></a>
+                                <% } else { %>
+                                    <a href="#"><i class="fa fa-bookmark-o bookmark"></i></a>
+                                    <% } %>
+                                        <% } %>
+                                            <p class="itemPrice">
+                                                <% if (moviesNewest[i].price===0) { %>
+                                                    Free
+                                                    <% } else { %>
+                                                        <%=moviesNewest[i].price%>$
+                                                            <% } %>
+                                            </p>
+                    </div>
+                    <%}%>
+            </div>
             <%- include('footer')%>
         </div>
 </body>
