--- a/frontend/views/applicationsTop.ejs
+++ b/frontend/views/applicationsTop.ejs
@@ -15,7 +15,7 @@
                 <% for (var i=0;i<applications.length;i++) {%>
                     <div class="itemBox">
 
-                        <img class="itemImageHome" src="<%=applications[i].image%>" alt="Image">
+                        <img class="itemImage" src="<%=applications[i].image%>" alt="Image">
                         <a
                             href="/item?itemType=<%=applications[i].constructor.modelName%>&itemId=<%=applications[i]._id%>">
                             <p class="itemTitleHome">
