--- a/frontend/views/booksTop.ejs
+++ b/frontend/views/booksTop.ejs
@@ -15,7 +15,7 @@
             <div class="itemsRow">
                 <% for (var i=0;i<books.length;i++) {%>
                     <div class="itemBox largeItemBoxHome">
-                        <img class="itemImageHome" src="<%=books[i].image%>" alt="Image">
+                        <img class="itemImage" src="<%=books[i].image%>" alt="Image">
                         <a href="/item?itemType=<%=books[i].constructor.modelName%>&itemId=<%=books[i]._id%>">
                             <p class="itemTitleHome">
                                 <%=books[i].title%>
