--- a/frontend/views/navbar.ejs
+++ b/frontend/views/navbar.ejs
@@ -1,6 +1,6 @@
 <nav>
-    <a href="#" id="sidebarIconAnchor"><img id="sidebarIcon" src="/media/sidebarIcon.png" alt="sidebarIcon"></a>
-    <img id="logo" src="/media/logo_transparent_big.png" alt="logo"></img>
+    <a href="#" id="sidebarIconAnchor"><img id="sidebarIcon" src="/../media/sidebarIcon.png" alt="sidebarIcon"></a>
+    <img id="logo" src="/../media/logo_transparent_big.png" alt="logo"></img>
     <a id="navTitleLink" href="/">
         <h1 id="navTitle">Play Store</h1>
     </a>
@@ -23,7 +23,7 @@
 <div id="userFormDiv">
     <a href="#" id="closeModal">&times;</a>
     <h1>Play Store</h1>
-    <img src="/media/logo_transparent_big.png" alt="logo">
+    <img src="/../media/logo_transparent_big.png" alt="logo">
     <div id="forgotPasswordDiv">
         <strong>
             <p>A new password willl be sent to this address</p>
@@ -54,7 +54,7 @@
 </div>
 <div id="userFormDiv">
     <h1>Play Store</h1>
-    <img src="/media/logo_transparent_big.png" alt="logo">
+    <img src="/../media/logo_transparent_big.png" alt="logo">
     <strong>
         <p>We will send a new password to your email address</p>
     </strong>
@@ -69,10 +69,10 @@
         <button class="dropbtn">Choose Currency</button>
         <div class="dropdown-content">
             <a id="USD" href="#">
-                <img src="media/currency/united-states.png" width="15" height="15"> USD
+                <img src="/../media/currency/united-states.png" width="15" height="15"> USD
             </a>
             <a id="LBP" href="#">
-                <img src="media/currency/lebanon.png" width="15" height="15"> LBP
+                <img src="/../media/currency/lebanon.png" width="15" height="15"> LBP
             </a>
         </div>
     </div>
@@ -81,16 +81,16 @@
         <button class="dropbtn">Filter By</button>
         <div class="dropdown-content">
             <a href="#">
-                <img src="media/filter/genre.png" width="15" height="15"> Genre
+                <img src="/../media/filter/genre.png" width="15" height="15"> Genre
             </a>
             <a href="#">
-                <img src="media/filter/topselling.png" width="15" height="15"> Top Selling
+                <img src="/../media/filter/topselling.png" width="15" height="15"> Top Selling
             </a>
             <a href="#">
-                <img src="media/filter/newreleases.png" width="15" height="15"> New Releases
+                <img src="/../media/filter/newreleases.png" width="15" height="15"> New Releases
             </a>
             <a href="#">
-                <img src="media/filter/gooddeals.png" width="15" height="15"> Good Deals
+                <img src="/../media/filter/gooddeals.png" width="15" height="15"> Good Deals
             </a>
         </div>
     </div>
