--- a/frontend/views/gamesTop.ejs
+++ b/frontend/views/gamesTop.ejs
@@ -15,7 +15,7 @@
             <div class="itemsRow">
                 <% for (var i=0;i<games.length;i++) {%>
                     <div class="itemBox">
-                        <img class="itemImageHome" src="<%=games[i].image%>" alt="Image">
+                        <img class="itemImage" src="<%=games[i].image%>" alt="Image">
                         <a href="/item?itemType=<%=games[i].constructor.modelName%>&itemId=<%=games[i]._id%>">
                             <p class="itemTitleHome">
                                 <%=games[i].title%>
