--- a/frontend/views/headImports.ejs
+++ b/frontend/views/headImports.ejs
@@ -5,11 +5,12 @@
 <link rel="stylesheet" href="/../css/sidebar.css" />
 <link rel="stylesheet" href="/../css/footer.css" />
 <link rel="stylesheet" href="/../css/userForm.css" />
+<link rel="stylesheet" href="/../css/movieTrailer.css" />
 <link rel="stylesheet" href="/../css/item.css" />
 <link rel="shortcut icon" href="/../media/logo_transparent_big.png" type="image/png">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script type="text/javascript" src="/../js/index.js"></script>
 <script type="text/javascript" src="/../js/itemBox.js"></script>
 <script type="text/javascript" src="/../js/currency.js"></script>
-<script type="text/javascript" src="/../js/filter.js"></script>
+<script type="text/javascript" src="/../js/categoryFilter.js"></script>
 <script type="text/javascript" src="/../js/footer.js"></script>
