--- a/frontend/views/item.ejs
+++ b/frontend/views/item.ejs
@@ -5,55 +5,73 @@
     <meta charset="UTF-8" />
     <title>Play Store</title>
     <%- include('headImports')%>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">  
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+            integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
 
 <body>
     <%- include('navbar')%>
-            <div id="userFormDiv">
-                <a href="#" id="closeModal">&times;</a>
-                <h1>Play Store</h1>
-                <img src="media/logo_transparent_big.png" alt="logo">
-                <form id="userForm" action="">
-                    <label for="usernameInput">Username</label><br>
-                    <input id="usernameInput" placeholder="Username" type="text"><br>
-                    <label for="passwordInput">Password</label><br>
-                    <input id="passwordInput" placeholder="Password" type="password"><br>
-                    <div id="loginExtrasDiv">
-                        <input type="checkbox" checked id="remembermeCheck">
-                        <label for="remembermeCheck">Remember Me</label>
-                        <a href="#">Forgot Password?</a>
-                    </div>
-                    <button id="userFormButton"></button>
-                </form>
-            </div>
-
-
-            <div class="item_box">
-                <div class="photo_title">
-                    <img class="itemImage" src="<%=item[0].image%>" alt="Image">
-                    <div class="details">
-                        <h1><%=item[0].title%></h1>
-                        <p><i class="fas fa-star"></i> Average Rating: <%=item[0].averageRating%> / 10</p> 
-                        <p><i class="fas fa-user"></i> Number of Reviews: <%=item[0].reviews%> </p>
-                        <p><i class="fas fa-tag"></i> Price: 
-                            <% if (item[0].price===0) { %>
-                                Free
-                                <% } else { %>
-                                    $<%=item[0].price%>
-                                        <% } %>
-                        
-                        </p>
-                    </div>
+        <div id="userFormDiv">
+            <a href="#" id="closeModal">&times;</a>
+            <h1>Play Store</h1>
+            <img src="/../media/logo_transparent_big.png" alt="logo">
+            <form id="userForm" action="">
+                <label for="usernameInput">Username</label><br>
+                <input id="usernameInput" placeholder="Username" type="text"><br>
+                <label for="passwordInput">Password</label><br>
+                <input id="passwordInput" placeholder="Password" type="password"><br>
+                <div id="loginExtrasDiv">
+                    <input type="checkbox" checked id="remembermeCheck">
+                    <label for="remembermeCheck">Remember Me</label>
+                    <a href="#">Forgot Password?</a>
                 </div>
-                <h4><%=item[0].description%></h4>
+                <button id="userFormButton"></button>
+            </form>
+        </div>
 
+
+        <div class="item_box">
+            <div class="photo_title">
+                <div class="movieImageDiv">
+                    <% if ("Movie".includes(item[0].constructor.modelName)) { %>
+                        <div class="overlay">
+                            <a href="<%=item[0].trailerLink%>" class="playIcon" title="Play">
+                                <i class="fa fa-play-circle-o"></i>
+                            </a>
+                        </div>
+                        <% } %>
+                            <img class="itemImage" src="<%=item[0].image%>" alt="Image">
+                </div>
+                <div class="details">
+                    <h1>
+                        <%=item[0].title%>
+                    </h1>
+                    <p><i class="fas fa-star"></i> Average Rating: <%=item[0].averageRating%> / 10</p>
+                    <p><i class="fas fa-user"></i> Number of Reviews: <%=item[0].reviews%>
+                    </p>
+                    <p><i class="fas fa-tag"></i> Price:
+                        <% if (item[0].price===0) { %>
+                            Free
+                            <% } else { %>
+                                $<%=item[0].price%>
+                                    <% } %>
+
+                    </p>
+                </div>
             </div>
+            <h4>
+                <%=item[0].description%>
+            </h4>
+            <h1>
+                <%=reviews%>
+            </h1>
 
-            <div id="content">
+        </div>
 
-                <%- include('footer')%>
-            </div>
+        <div id="content">
+
+            <%- include('footer')%>
+        </div>
 </body>
 
 </html>
