--- a/frontend/views/wishlist.ejs
+++ b/frontend/views/wishlist.ejs
@@ -13,16 +13,16 @@
             <button class="dropbtn">Category</button>
             <div class="dropdown-content">
                 <a id="filterApplications" href="#">
-                    <img src="media/filter/genre.png" width="15" height="15"> Applications
+                    <img src="/../media/filter/genre.png" width="15" height="15"> Applications
                 </a>
                 <a id="filterGames" href="#">
-                    <img src="media/filter/topselling.png" width="15" height="15"> Games
+                    <img src="/../media/filter/topselling.png" width="15" height="15"> Games
                 </a>
                 <a id="filterMovies" href="#">
-                    <img src="media/filter/newreleases.png" width="15" height="15"> Movies
+                    <img src="/../media/filter/newreleases.png" width="15" height="15"> Movies
                 </a>
                 <a id="filterBooks" href="#">
-                    <img src="media/filter/gooddeals.png" width="15" height="15"> Books
+                    <img src="/../media/filter/gooddeals.png" width="15" height="15"> Books
                 </a>
             </div>
         </div>
@@ -34,7 +34,18 @@
                             <% } else { %>
                                 <div class="itemBox">
                                     <% } %>
-                                        <img class="itemImage" src="<%=wishlist[i].image%>" alt="Image">
+                                        <div class="movieImageDiv">
+                                            <% if ("Movie".includes(wishlist[i].constructor.modelName)) { %>
+                                                <div class="overlay">
+                                                    <a href="<%=wishlist[i].trailerLink%>" class="playIcon"
+                                                        title="Play">
+                                                        <i class="fa fa-play-circle-o"></i>
+                                                    </a>
+                                                </div>
+                                                <% } %>
+                                                    <img class="itemImage" src="<%=wishlist[i].image%>"
+                                                        alt="Image">
+                                        </div>
                                         <a
                                             href="/item?itemType=<%=wishlist[i].constructor.modelName%>&itemId=<%=wishlist[i]._id%>">
                                             <p class="itemTitle">
