profile pic implemented

--- a/frontend/views/navbar.ejs
+++ b/frontend/views/navbar.ejs
@@ -5,7 +5,7 @@
         <h1 id="navTitle">Play Store</h1>
     </a>
     <input id="navSearch" placeholder="Search..." type="text">
-    <img id="pp" src="" alt="profile pic">
+    <img id="pp" alt="profile pic">
     <button class="navButtons" id="logoutNavButton"><a href="/logout">Logout</a></button>
     <button class="navButtons" id="signupNavButton">Sign Up</button>
     <button class="navButtons" id="loginNavButton">Login</button>
@@ -45,6 +45,8 @@
             <div id="RegisterExtrasDiv">
                 <label for="email">Email</label><br>
                 <input id="email" placeholder="Email" type="text" name="email"><br>
+                <label for="image">Profile Pic</label><br>
+                <input type="file" name="image" id="image"/>
             </div>
             <button id="userFormButton"></button>
         </form>
