[Add] Sorting Items [Fix] LBP Currency

--- a/frontend/css/itemBox.css
+++ b/frontend/css/itemBox.css
@@ -54,6 +54,15 @@
 .itemBox .itemId {
   display: none;
 }
+.itemBox .itemCopies {
+  display: none;
+}
+.itemBox .itemRating {
+  display: none;
+}
+.itemBox .itemDate {
+  display: none;
+}
 
 .reviewId {
   display: none;
