--- a/frontend/views/applicationsTop.ejs
+++ b/frontend/views/applicationsTop.ejs
@@ -9,6 +9,23 @@
 
 <body>
     <%- include('navbar')%>
+        <div class="dropdown">
+            <button class="dropbtn">Sort By</button>
+            <div id="sortDiv" class="dropdown-content">
+                <a href="#">
+                    <img src="/../media/filter/genre.png" width="15" height="15"> Top Rated
+                </a>
+                <a href="#">
+                    <img src="/../media/filter/topselling.png" width="15" height="15"> Top Selling
+                </a>
+                <a href="#">
+                    <img src="/../media/filter/newreleases.png" width="15" height="15"> New Releases
+                </a>
+                <a href="#">
+                    <img src="/../media/filter/gooddeals.png" width="15" height="15"> Cheapest
+                </a>
+            </div>
+        </div>
         <h1 class="page_title">APPLICATIONS</h1>
         <div id="content">
             <div class="itemsRow">
@@ -27,6 +44,15 @@
                         </p>
                         <p class="itemId">
                             <%=applications[i]._id%>
+                        </p>
+                        <p class="itemCopies">
+                            <%=applications[i].copiesSold%>
+                        </p>
+                        <p class="itemRating">
+                            <%=applications[i].averageRating%>
+                        </p>
+                        <p class="itemDate">
+                            <%=applications[i].dateOfRelease%>
                         </p>
                         <% if (username) { %>
                             <% if (wishlist.includes(applications[i]._id)) { %>
