--- a/frontend/views/item.ejs
+++ b/frontend/views/item.ejs
@@ -36,7 +36,7 @@
                 <div class="movieImageDiv">
                     <% if ("Movie".includes(item[0].constructor.modelName)) { %>
                         <div class="overlay">
-                            <a href="<%=item[0].trailerLink%>" class="playIcon" title="Play">
+                            <a href="<%=item[0].trailerLink%>" target="_blank" class="playIcon" title="Play">
                                 <i class="fa fa-play-circle-o"></i>
                             </a>
                         </div>
