--- a/frontend/views/headImports.ejs
+++ b/frontend/views/headImports.ejs
@@ -12,5 +12,5 @@
 <script type="text/javascript" src="/../js/index.js"></script>
 <script type="text/javascript" src="/../js/itemBox.js"></script>
 <script type="text/javascript" src="/../js/currency.js"></script>
-<script type="text/javascript" src="/../js/categoryFilter.js"></script>
+<script type="text/javascript" src="/../js/sort.js"></script>
 <script type="text/javascript" src="/../js/footer.js"></script>
