--- a/frontend/views/home.ejs
+++ b/frontend/views/home.ejs
@@ -54,7 +54,7 @@
                     <div class="itemBox largeItemBoxHome">
                         <div class="movieImageDiv">
                             <div class="overlay">
-                                <a href="<%=topSellingMovies[i].trailerLink%>" class="playIcon" title="Play">
+                                <a href="<%=topSellingMovies[i].trailerLink%>" target="_blank" class="playIcon" title="Play">
                                     <i class="fa fa-play-circle-o"></i>
                                 </a>
                             </div>
