--- a/frontend/views/search.ejs
+++ b/frontend/views/search.ejs
@@ -5,10 +5,29 @@
     <meta charset="UTF-8" />
     <title>Play Store</title>
     <%- include('headImports')%>
+        <script type="text/javascript" src="/../js/categoryFilter.js"></script>
 </head>
 
 <body>
     <%- include('navbar')%>
+
+        <div class="dropdown">
+            <button class="dropbtn">Sort By</button>
+            <div id="sortDiv" class="dropdown-content">
+                <a href="#">
+                    <img src="/../media/filter/genre.png" width="15" height="15"> Top Rated
+                </a>
+                <a href="#">
+                    <img src="/../media/filter/topselling.png" width="15" height="15"> Top Selling
+                </a>
+                <a href="#">
+                    <img src="/../media/filter/newreleases.png" width="15" height="15"> New Releases
+                </a>
+                <a href="#">
+                    <img src="/../media/filter/gooddeals.png" width="15" height="15"> Cheapest
+                </a>
+            </div>
+        </div>
         <div class="dropdown">
             <button class="dropbtn">Category</button>
             <div class="dropdown-content">
@@ -39,8 +58,8 @@
                                             <div class="movieImageDiv">
                                                 <% if ("Movie".includes(items[i][j].constructor.modelName)) { %>
                                                     <div class="overlay">
-                                                        <a href="<%=items[i][j].trailerLink%>" class="playIcon"
-                                                            title="Play">
+                                                        <a href="<%=items[i][j].trailerLink%>" target="_blank"
+                                                            class="playIcon" title="Play">
                                                             <i class="fa fa-play-circle-o"></i>
                                                         </a>
                                                     </div>
@@ -58,6 +77,15 @@
                                             </p>
                                             <p class="itemId">
                                                 <%=items[i][j]._id%>
+                                            </p>
+                                            <p class="itemCopies">
+                                                <%=items[i][j].copiesSold%>
+                                            </p>
+                                            <p class="itemRating">
+                                                <%=items[i][j].averageRating%>
+                                            </p>
+                                            <p class="itemDate">
+                                                <%=items[i][j].dateOfRelease%>
                                             </p>
                                             <% if (username) { %>
                                                 <% if (wishlist.includes(items[i][j]._id)) { %>
