--- a/frontend/views/wishlist.ejs
+++ b/frontend/views/wishlist.ejs
@@ -5,10 +5,28 @@
     <meta charset="UTF-8" />
     <title>Play Store</title>
     <%- include('headImports')%>
+        <script type="text/javascript" src="/../js/categoryFilter.js"></script>
 </head>
 
 <body>
     <%- include('navbar')%>
+        <div class="dropdown">
+            <button class="dropbtn">Sort By</button>
+            <div id="sortDiv" class="dropdown-content">
+                <a href="#">
+                    <img src="/../media/filter/genre.png" width="15" height="15"> Top Rated
+                </a>
+                <a href="#">
+                    <img src="/../media/filter/topselling.png" width="15" height="15"> Top Selling
+                </a>
+                <a href="#">
+                    <img src="/../media/filter/newreleases.png" width="15" height="15"> New Releases
+                </a>
+                <a href="#">
+                    <img src="/../media/filter/gooddeals.png" width="15" height="15"> Cheapest
+                </a>
+            </div>
+        </div>
         <div class="dropdown">
             <button class="dropbtn">Category</button>
             <div class="dropdown-content">
@@ -37,14 +55,13 @@
                                         <div class="movieImageDiv">
                                             <% if ("Movie".includes(wishlist[i].constructor.modelName)) { %>
                                                 <div class="overlay">
-                                                    <a href="<%=wishlist[i].trailerLink%>" class="playIcon"
-                                                        title="Play">
+                                                    <a href="<%=wishlist[i].trailerLink%>" target="_blank"
+                                                        class="playIcon" title="Play">
                                                         <i class="fa fa-play-circle-o"></i>
                                                     </a>
                                                 </div>
                                                 <% } %>
-                                                    <img class="itemImage" src="<%=wishlist[i].image%>"
-                                                        alt="Image">
+                                                    <img class="itemImage" src="<%=wishlist[i].image%>" alt="Image">
                                         </div>
                                         <a
                                             href="/item?itemType=<%=wishlist[i].constructor.modelName%>&itemId=<%=wishlist[i]._id%>">
@@ -57,6 +74,15 @@
                                         </p>
                                         <p class="itemId">
                                             <%=wishlist[i]._id%>
+                                        </p>
+                                        <p class="itemCopies">
+                                            <%=wishlist[i].copiesSold%>
+                                        </p>
+                                        <p class="itemRating">
+                                            <%=wishlist[i].averageRating%>
+                                        </p>
+                                        <p class="itemDate">
+                                            <%=wishlist[i].dateOfRelease%>
                                         </p>
 
                                         <% if (wishlist.includes(wishlist[i])) { %>
